add: more utils to the commands, better redis support