@@ -3,62 +3,61 @@ package singularity.utils;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import com.google.gson.stream.JsonReader;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.IOException;
-import java.io.StringReader;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.UUID;
 
 public class UUIDFetcher {
-    private static final String API_URL = "https://playerdb.co/api/player/minecraft/";
+    private static final String API_URL = "https://playerdb.co/api/player/minecraft/%s";
 
     @Nullable
     public static UUID getUUID(@NotNull String name) {
         name = name.toLowerCase(); // Had some issues with upper-case letters in the username, so I added this to make sure that doesn't happen.
 
-        try (HttpClient client = HttpClient.newHttpClient()) {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(API_URL + name))
-                    .GET()
-                    .build();
+        try {
+            HttpURLConnection connection = (HttpURLConnection) new URL(String.format(API_URL, name)).openConnection();
 
-            try {
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-                if (response.statusCode() != 200) {
-                    MessageUtils.logInfo("Failed to fetch UUID for username: " + name + ". HTTP status code: " + response.statusCode());
-                    return null; // If the response is not OK, return null.
-                }
+            connection.setUseCaches(false);
+            connection.setDefaultUseCaches(false);
+            connection.addRequestProperty("User-Agent", "Mozilla/5.0");
+            connection.addRequestProperty("Cache-Control", "no-cache, no-store, must-revalidate");
+            connection.addRequestProperty("Pragma", "no-cache");
+            connection.setReadTimeout(5000);
 
-                JsonElement parsed = JsonParser.parseString(response.body());
+            // These connection parameters need to be set or the API won't accept the connection.
+
+            try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                StringBuilder response = new StringBuilder();
+                String line;
+
+                while ((line = bufferedReader.readLine()) != null) response.append(line);
+
+                final JsonElement parsed = new JsonParser().parse(response.toString());
+
                 if (parsed == null || !parsed.isJsonObject()) {
-                    MessageUtils.logInfo("Failed to parse JSON response for name: " + name);
                     return null;
                 }
 
-                JsonObject data = parsed.getAsJsonObject();
-                String uuid = data.get("data")
-                        .getAsJsonObject()
-                        .get("player")
-                        .getAsJsonObject()
-                        .get("username")
-                        .getAsString();
+                JsonObject data = parsed.getAsJsonObject(); // Read the returned JSON data.
 
-                return UUID.fromString(uuid);
-            } catch (IOException | InterruptedException e) {
-                MessageUtils.logInfo("Error fetching UUID for username: " + name + " - " + e.getMessage());
-                return null;
+                return UUID.fromString(
+                        data.get("data")
+                                .getAsJsonObject()
+                                .get("player")
+                                .getAsJsonObject()
+                                .get("id") // Grab the UUID.
+                                .getAsString()
+                );
             }
         } catch (Exception ignored) {
             // Ignoring exception since this is usually caused by non-existent usernames.
         }
 
-        MessageUtils.logInfo("Failed to get UUID for username: " + name);
         return null;
     }
 
@@ -66,43 +65,43 @@ public class UUIDFetcher {
     public static String getName(@NotNull String uuid) {
         uuid = uuid.toLowerCase(); // Had some issues with upper-case letters in the username, so I added this to make sure that doesn't happen.
 
-        try (HttpClient client = HttpClient.newHttpClient()) {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(API_URL + uuid))
-                    .GET()
-                    .build();
+        try {
+            HttpURLConnection connection = (HttpURLConnection) new URL(String.format(API_URL, uuid)).openConnection();
 
-            try {
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-                if (response.statusCode() != 200) {
-                    MessageUtils.logInfo("Failed to fetch username for UUID: " + uuid + ". HTTP status code: " + response.statusCode());
-                    return null; // If the response is not OK, return null.
-                }
+            connection.setUseCaches(false);
+            connection.setDefaultUseCaches(false);
+            connection.addRequestProperty("User-Agent", "Mozilla/5.0");
+            connection.addRequestProperty("Cache-Control", "no-cache, no-store, must-revalidate");
+            connection.addRequestProperty("Pragma", "no-cache");
+            connection.setReadTimeout(5000);
 
-                StringReader stringReader = new StringReader(response.body());
-                JsonReader jsonReader = new JsonReader(stringReader);
-                JsonElement parsed = JsonParser.parseReader(jsonReader);
+            // These connection parameters need to be set or the API won't accept the connection.
+
+            try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                StringBuilder response = new StringBuilder();
+                String line;
+
+                while ((line = bufferedReader.readLine()) != null) response.append(line);
+
+                final JsonElement parsed = new JsonParser().parse(response.toString());
+
                 if (parsed == null || !parsed.isJsonObject()) {
-                    MessageUtils.logInfo("Failed to parse JSON response for UUID: " + uuid);
                     return null;
                 }
 
-                JsonObject data = parsed.getAsJsonObject();
+                JsonObject data = parsed.getAsJsonObject(); // Read the returned JSON data.
+
                 return data.get("data")
                         .getAsJsonObject()
                         .get("player")
                         .getAsJsonObject()
-                        .get("username")
+                        .get("username") // Grab the UUID.
                         .getAsString();
-            } catch (IOException | InterruptedException e) {
-                MessageUtils.logInfo("Error fetching username for UUID: " + uuid + " - " + e.getMessage());
-                return null;
             }
         } catch (Exception ignored) {
             // Ignoring exception since this is usually caused by non-existent usernames.
         }
 
-        MessageUtils.logInfo("Failed to get name for UUID: " + uuid);
         return null;
     }
 
